# MBSE

./: .env.example  .gitignore  pyproject.toml  requirements.txt
docs/: integration-guide.md
docs/superpowers/plans/: 2026-03-23-full-arcadia-process.md  2026-03-23-mbse-model-generator.md  2026-03-23-project-workspace.md
docs/superpowers/specs/: 2026-03-23-full-arcadia-process-design.md  2026-03-23-mbse-model-generator-design.md  2026-03-23-project-workspace-design.md
prompts/: generate_capella_epbs.txt  generate_capella_la.txt  generate_capella_oa.txt  generate_capella_pa.txt  generate_capella_sa.txt  generate_rhapsody_act.txt  generate_rhapsody_bdd.txt  generate_rhapsody_ibd.txt  generate_rhapsody_req.txt  generate_rhapsody_seq.txt  generate_rhapsody_stm.txt  instruct_capella.txt  link.txt
src/: config.py  cost_tracker.py  exporter.py  llm_client.py  main.py  parser.py  pipeline.py  project.py
src/agent/: chat.py  tools.py
src/models/: __init__.py  capella.py  core.py
src/stages/: __init__.py  analyze.py  clarify.py  generate.py  instruct.py  link.py
src/web/: app.py
src/web/static/: app.js  style.css
src/web/templates/: index.html  print.html
tests/: conftest.py  test_agent_tools.py  test_config.py  test_cost_tracker.py  test_exporter.py  test_llm_client.py  test_models.py  test_parser.py  test_pipeline.py  test_pipeline_incremental.py  test_project.py  test_project_model.py  test_stages.py
tests/fixtures/: sample_requirements.csv  sample_requirements.xlsx
