[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mbsegen"
version = "0.1.0"
description = "Transform decomposed requirements into MBSE model structures for Capella and IBM Rhapsody"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Jude"},
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.5",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
mbsegen = "src.main:main"

[project.urls]
Repository = "https://github.com/jude-sph/MBSE"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.html", "*.css", "*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
